force-app/Base/main/default/objects/Certification_Held__c/Certification_Held__c.object-meta.xml
<CustomObject>
	<description>Used to track each time a contact achieves a certification.</description>
	<label>Certification Held</label>
	<nameField>
		<displayFormat>CERTIFICATION-{00000}</displayFormat>
		<label>Certification Held Number</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Certifications Held</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>