force-app/Base/main/default/objects/Certification_Held__c/fields/Certification__c.field-meta.xml
<CustomField>
	<fullName>Certification__c</fullName>
	<description>Certification being achieved.</description>
	<label>Certification</label>
	<referenceTo>Certification__c</referenceTo>
	<relationshipLabel>Certifications Held</relationshipLabel>
	<relationshipName>Certifications_Held</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>