force-app/Base/main/default/objects/Certification_Held__c/fields/Certified_Professional__c.field-meta.xml
<CustomField>
	<fullName>Certified_Professional__c</fullName>
	<description>Contact who is certified.</description>
	<label>Certified Professional</label>
	<lookupFilter>
		<active>true</active>
		<filterItems>
			<field>Contact.RecordTypeId</field>
			<operation>equals</operation>
			<value>Technician</value>
		</filterItems>
		<isOptional>false</isOptional>
	</lookupFilter>
	<referenceTo>Contact</referenceTo>
	<relationshipLabel>Certifications Held</relationshipLabel>
	<relationshipName>Certifications_Held</relationshipName>
	<relationshipOrder>1</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>