force-app/Base/main/default/objects/Certification_Held__c/fields/Date_Achieved__c.field-meta.xml
<CustomField>
	<fullName>Date_Achieved__c</fullName>
	<description>Date certification was achieved.</description>
	<label>Date Achieved</label>
	<type>Date</type>
</CustomField>